src/objects/Video__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Consult</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Videos</relationshipLabel>
        <relationshipName>Videos</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Patient Consult</fullName>
                </value>
                <value>
                    <fullName>Doctor Download</fullName>
                </value>
                <value>
                    <fullName>Roleplay</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Video</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Link__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Video-{0000}</displayFormat>
        <label>Video Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Videos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>